--- a/npm/public/index.html
+++ b/npm/public/index.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-   <h1>This is Ayush Saxena,the software developer</h1> 
+   <h1>This is Ayush Saxena,the Software Engineer</h1> 
 </body>
 </html>
